--- a/src/assets/Style/_Color.scss
+++ b/src/assets/Style/_Color.scss
@@ -9,4 +9,8 @@ $Tabel-action-border-color:#989ca8;
 $Table-text-color:#424a60;
 // table Colors End here
 
+// radiobtn colors
+$radio-color:#D1D4DB;
 
+// switch button color
+$switch-btn-off:#b7bfc6;
