dashboard color variable add

--- a/src/assets/Style/_Color.scss
+++ b/src/assets/Style/_Color.scss
@@ -14,3 +14,7 @@ $radio-color:#D1D4DB;
 
 // switch button color
 $switch-btn-off:#b7bfc6;
+// Dashboard color
+$dashboard-card-hadr:#6b97df;
+$dashboard-card-hr-vl-line:#e0e0e0;
+$dashboard-card-left-right-text:#bdbdbd;
