margin-padding variable adding

--- a/src/assets/Style/Common.scss
+++ b/src/assets/Style/Common.scss
@@ -5,6 +5,8 @@
 @import './Radiobutton.scss';
 @import './SwitchButton.scss';
 @import './dashboard.scss';
+@import './margin&pading.scss';
+
 // font-family
 .fnt-poppins{
         font-family: 'Poppins', sans-serif;
