--- a/src/assets/Style/Common.scss
+++ b/src/assets/Style/Common.scss
@@ -6,6 +6,9 @@
 @import './SwitchButton.scss';
 @import './dashboard.scss';
 @import './margin&pading.scss';
+@import '../Responsive/dev1/dev1.scss';
+@import '../Responsive/dev2/dev2.scss';
+@import '../Responsive/dev3/dev3.scss';
 
 // font-family
 .fnt-poppins{
