--- a/src/assets/Responsive/dev3/dev3.scss
+++ b/src/assets/Responsive/dev3/dev3.scss
@@ -92,4 +92,27 @@
     .table-row-of-head th {
        padding: 9px;
     }
+    // .dash-board-cards {
+    //     width: 276px;
+    //     margin-left: 15px;
+    // }
+    // .dash-board-cards .dashboard-card-hr-line {
+    //     width: 233px;
+    // }
+    // .dashboard-reesposive-data  {
+    //     margin-left: 32px;
+
+    // }
+    // .dash-board-cards .dashboard-cards-min-line {
+    //     margin-left: -64px;
+       
+    // }
+
+    // .number-data-responsive {
+    //     margin-left: 48px;
+    // }
+    // .last-week-main-dev .Last-week-card-section {
+    //     width: 222px;
+    // }
+
  }
