graphQL wrap root element added in app.js

--- a/src/assets/Style/Common.scss
+++ b/src/assets/Style/Common.scss
@@ -6,7 +6,7 @@
 @import './SwitchButton.scss';
 @import './dashboard.scss';
 @import './margin&pading.scss';
-@import '../Responsive/dev1/dev1.scss';
+//@import '../Responsive/dev1/dev1.scss';
 @import '../Responsive/dev2/dev2.scss';
 @import '../Responsive/dev3/dev3.scss';
 
