tables are modified for responsive

--- a/src/assets/Responsive/dev3/dev3.scss
+++ b/src/assets/Responsive/dev3/dev3.scss
@@ -13,7 +13,19 @@
         height: 40px;
         width: 178px;
     }
-
+    .main-table-heading {
+        width: 95%;
+    }
+    .viewAnnouncement-Table {
+        width: 95%!important;
+      }   
+      .setting-table-main {
+        width: 95%!important;
+        
+    } 
+    .view-btn-of-table {
+        width: 139px;
+    }
 }
 @media (max-width: 1199px) and (min-width: 1024px) { 
     .sidenav-Links {
