--- a/src/assets/Responsive/dev2/dev2.scss
+++ b/src/assets/Responsive/dev2/dev2.scss
@@ -1,15 +1,113 @@
 @media (max-width: 1400px) and (min-width: 1200px) { 
+    //  dashboard responsive start here
+    .dashboard-main-cards-div{
+           width:100%;
+           padding:20px;
+       }
+    .dash-board-cards {
+    width: 286px!important;
+   margin-left: 24px!important;
+   justify-content: space-between;
+    }
+    .card-inner-main-div{
+        width:100%;
+    }
+     .dashboard-card-hr-line {
+     width: 100% !important;
+     margin-left: 0px !important;
+   }
+    .card-left-text {
+   width: 50%!important;
+    h1{
+     margin-left: 38px;
+   }
+    p{
+       margin-left: 50px;
+       }
+    }
+    .card-right-text {
+        width:50%!important;
+    h1{
+       margin-left: 25px;
+     }
+    p{
+     margin-left: 50px;
+     }
+   }
+   .dashboard-main-cards-div{
+        margin-top: -10px;
+        margin-left: -13px;
+   }
+    .Last-week-card-section {
+   width: 210px!important;
+   }
+   .Last-week-card-section {
+       height: 376px!important;
+   }
+   .Table-Header {
+    width: 95%!important;
+    margin-left: 2.5%;
+    }
+   //  dashboard responsive end here
+       input.inputs-of-admistrator {
+       width: 750px!important;
+       }
+       select.inputs-of-admistrator {
+           width: 750px!important;
+           // margin-left: -33px;
+       }
+       .textarea-of-admistrator{
+           width: 750px!important;
+           // margin-left: -33px;
+       }
+       .inputs-for-responsive{
+           // margin-left: 0px;
+           width: 750px!important; 
+       }
+       .radios{
+           width:400px!important;
+       }
+       .radios-of-group {
+           width:400px!important;
+       }
+       .Form-Inputs-Fields input {
+           width: 400px!important;
+       }
+       .Form-Inputs-Fields select {
+           width: 400px;
+       }
+       .ck-Editor{
+           width:750px!important;
+           // margin-left:30px;
+       }
+       .ck-editor-of-compaign{
+           width: 750px;
+           .ck-editor-of-compaign-border{
+           border-right: 1px solid $radio-color;
+           }
+       }
+       .redonly-input{
+           width:750px;
+       }
+   }
+
+@media (max-width: 1260px) and (min-width: 1200px) { 
  //  dashboard responsive start here
+ .dashboard-main-cards-div{
+        width:100%;
+        padding:20px;
+    }
  .dash-board-cards {
  width: 286px!important;
-margin-left: 20px!important;
+margin-left: 24px!important;
+justify-content: space-between;
  }
   .dashboard-card-hr-line {
   width: 265px !important;
-  margin-left: 15px !important;
+  margin-left: 7px !important;
 }
  .card-left-text {
-width: 142px!important;
+width: 138px!important;
  h1{
   margin-left: 38px;
 }
@@ -26,10 +124,14 @@ width: 142px!important;
   }
 }
 .dashboard-main-cards-div{
-     margin-top: 20px;
+     margin-top: -10px;
+     margin-left: -13px;
 }
  .Last-week-card-section {
 width: 210px!important;
+}
+.Last-week-card-section {
+    height: 376px!important;
 }
 .Table-Header {
  width: 95%!important;
