dashboard clr changed

--- a/src/assets/Style/Common.scss
+++ b/src/assets/Style/Common.scss
@@ -1,5 +1,5 @@
 @import './Color.scss';
-@import './CreateTable';
+@import './CreateTable.scss';
 @import './Table.scss';
 @import './CheckBox.scss';
 @import './Radiobutton.scss';
