--- a/src/assets/Style/_Color.scss
+++ b/src/assets/Style/_Color.scss
@@ -2,11 +2,12 @@
 $Heading-of-Header:#65696b;
 $Table-Button-color:#f17a28;
 $Table-navbar:#323b52;
-$Table-title:#01c2c4;
+$Table-title:#4379E9;
 $White-color:#fff;
 $Table-Background:#f8f9fa;
 $Tabel-action-border-color:#989ca8;
 $Table-text-color:#424a60;
+$btn-bg-color-save:#4379E9;
 // table Colors End here
 
 // radiobtn colors
