--- a/src/assets/Style/_CreateTable.scss
+++ b/src/assets/Style/_CreateTable.scss
@@ -34,15 +34,24 @@
         width: 114px;
         height: 39px;
         border-radius: 4px;
-        border: 1px solid $Tabel-action-border-color;    
+        border: 1px solid $Tabel-action-border-color; 
+        cursor: pointer;
+        &:hover {
+            background-color: #e3dede;
+        }
+    
     }
     .Save-btn-of-form{
         width: 114px;
         height: 39px;
         border-radius: 4px;
-        border: 1px solid $Table-navbar;
-        background: $Table-navbar;
-        color: $White-color;    
+        border: 1px solid $btn-bg-color-save;
+        background: $btn-bg-color-save;
+        color: $White-color;  
+        cursor: pointer; 
+        &:hover {
+            background-color: #3f44d6;
+        }
     }
     .ck-Editor{
         width: 900px;
