--- a/src/assets/Style/_Table.scss
+++ b/src/assets/Style/_Table.scss
@@ -25,6 +25,7 @@
     border-radius: 6px;
     color: $White-color;
     font-size: 17px;
+    font-size: 15px;
     &:hover {
         background-color: #3f44d6;
     }
