--- a/src/assets/Style/dashboard.scss
+++ b/src/assets/Style/dashboard.scss
@@ -34,10 +34,7 @@
     width:160px;
 }
 .last-week-main-dev{
-    .Last-week-cards-main-dev{
-        justify-content: space-evenly;
-        
-    }
+    min-height:75vh ;
 .dashboard-Lastweek-Campaign-hdr{
 width: 1311px;
     height: 69px;
@@ -45,8 +42,8 @@ width: 1311px;
 
 }
 .Last-week-card-section{
-       width: 265px;
-    height: 400px;
+    width: 289px;
+    height: 440px;
     box-shadow: 0 0 18px 0 $dashbrd-card-box-shadow;
      border-radius:10px;
 
