--- a/src/assets/Responsive/dev2/dev2.scss
+++ b/src/assets/Responsive/dev2/dev2.scss
@@ -34,15 +34,23 @@
      margin-left: 50px;
      }
    }
+   .last-week-wraping-cards{
+       flex-wrap: wrap;
+       width:100%!important;
+   }
    .dashboard-main-cards-div{
         margin-top: -10px;
         margin-left: -13px;
    }
     .Last-week-card-section {
-   width: 210px!important;
+//    width: 100px!important;
+max-width:223px!important;
+   height: 376px!important;
    }
-   .Last-week-card-section {
-       height: 376px!important;
+   .resonsive-save-butten-cards{
+       width:100px!important ;
+       max-height:30px!important;
+       font-size: 13px!important;
    }
    .Table-Header {
     width: 95%!important;
@@ -91,94 +99,7 @@
        }
    }
 
-@media (max-width: 1260px) and (min-width: 1200px) { 
- //  dashboard responsive start here
- .dashboard-main-cards-div{
-        width:100%;
-        padding:20px;
-    }
- .dash-board-cards {
- width: 286px!important;
-margin-left: 24px!important;
-justify-content: space-between;
- }
-  .dashboard-card-hr-line {
-  width: 265px !important;
-  margin-left: 7px !important;
-}
- .card-left-text {
-width: 138px!important;
- h1{
-  margin-left: 38px;
-}
- p{
-    margin-left: 50px;
-    }
- }
- .card-right-text {
- h1{
-    margin-left: 25px;
-  }
- p{
-  margin-left: 50px;
-  }
-}
-.dashboard-main-cards-div{
-     margin-top: -10px;
-     margin-left: -13px;
-}
- .Last-week-card-section {
-width: 210px!important;
-}
-.Last-week-card-section {
-    height: 376px!important;
-}
-.Table-Header {
- width: 95%!important;
- margin-left: 2.5%;
- }
-//  dashboard responsive end here
-    input.inputs-of-admistrator {
-    width: 750px!important;
-    }
-    select.inputs-of-admistrator {
-        width: 750px!important;
-        // margin-left: -33px;
-    }
-    .textarea-of-admistrator{
-        width: 750px!important;
-        // margin-left: -33px;
-    }
-    .inputs-for-responsive{
-        // margin-left: 0px;
-        width: 750px!important; 
-    }
-    .radios{
-        width:400px!important;
-    }
-    .radios-of-group {
-        width:400px!important;
-    }
-    .Form-Inputs-Fields input {
-        width: 400px!important;
-    }
-    .Form-Inputs-Fields select {
-        width: 400px;
-    }
-    .ck-Editor{
-        width:750px!important;
-        // margin-left:30px;
-    }
-    .ck-editor-of-compaign{
-        width: 750px;
-        .ck-editor-of-compaign-border{
-        border-right: 1px solid $radio-color;
-        }
-    }
-    .redonly-input{
-        width:750px;
-    }
-}
+
 // 1200 to 1400 Quries end here
 // 1024 to 1199 media Quries start here
 @media (max-width: 1199px) and (min-width: 1024px) { 
