--- a/src/assets/Style/Common.scss
+++ b/src/assets/Style/Common.scss
@@ -59,3 +59,6 @@ cursor: pointer;
         font-weight: 600;
         color: black;
 }
+.cursor-pointer-not-allowed{
+        cursor: not-allowed;
+}
