signin text added on button

--- a/src/assets/Style/Common.scss
+++ b/src/assets/Style/Common.scss
@@ -78,3 +78,6 @@ cursor: pointer;
         border-radius: 8px;
         background: $Table-Background;
 }       
+.color-red-text{
+        color: $red-color;
+}
