--- a/src/assets/Style/_Color.scss
+++ b/src/assets/Style/_Color.scss
@@ -8,6 +8,7 @@ $Table-Background:#f8f9fa;
 $Tabel-action-border-color:#989ca8;
 $Table-text-color:#424a60;
 $btn-bg-color-save:#4379E9;
+$red-color:red;
 // table Colors End here
 
 // radiobtn colors
