--- a/src/assets/Style/_CreateTable.scss
+++ b/src/assets/Style/_CreateTable.scss
@@ -31,8 +31,7 @@
         border: 1px solid $Tabel-action-border-color;
     }
     .cancel-btn-of-form{
-        width: 114px;
-        height: 39px;
+        padding: 8px 35px 8px 35px;
         border-radius: 4px;
         border: 1px solid $Tabel-action-border-color; 
         font-size: 15px;
