--- a/src/assets/Responsive/dev2/dev2.scss
+++ b/src/assets/Responsive/dev2/dev2.scss
@@ -1,5 +1,11 @@
 @media (max-width: 1400px) and (min-width: 1200px) { 
     //  dashboard responsive start here
+    .background-dashboard{
+        margin-left: 8px!important;
+    }
+    .Last-week-card-section{
+        width: 270px!important;
+    }
     .dashboard-main-cards-div{
            width:100%;
            padding:20px;
