updateTemplates error resolved

--- a/src/assets/Responsive/dev2/dev2.scss
+++ b/src/assets/Responsive/dev2/dev2.scss
@@ -67,6 +67,7 @@
        }
        select.inputs-of-admistrator {
            width: 750px!important;
+           height: 45px!important;
            // margin-left: -33px;
        }
        .textarea-of-admistrator{
