ip commented in category page

--- a/src/assets/Style/dashboard.scss
+++ b/src/assets/Style/dashboard.scss
@@ -35,6 +35,7 @@
     }
     .last-week-wraping-cards{
         flex-wrap: wrap;
+        justify-content: center;
     }
     .last-week-main-dev{
         min-height:70vh ;
