search added in view users page

--- a/src/assets/Responsive/dev3/dev3.scss
+++ b/src/assets/Responsive/dev3/dev3.scss
@@ -15,7 +15,7 @@
     }
     span.cursor-pointer.view-btn-of-table {
         padding: 8px 0px 0px 7px;
-        height: 40px;
+        // height: 40px;
         width: 133px;
     }
     .main-table-heading {
